--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -11,7 +11,7 @@
         <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
         <script>
           $(function() {
-            $( "#created" ).datepicker();
+            $( "#id_created" ).datepicker();
           });
         </script>
         
