--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Welcome To Disc Golfer</title>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
         <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}css/layout.css" rel="stylesheet">
@@ -9,11 +9,6 @@
         <link href="{{ STATIC_URL }}css/dg_style.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
-        <script>
-          $(function() {
-            $( "#id_created" ).datepicker();
-          });
-        </script>
         
       {% block extra_head %}
       {% endblock extra_head %}
