make title dynamic

--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome To Disc Golfer</title>
+        <title>{{ title }}</title>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
         <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
         <link href="{{ STATIC_URL }}css/layout.css" rel="stylesheet">
