use bootstrap for styling

--- a/disc_golfer/static/css/dg_style.css
+++ b/disc_golfer/static/css/dg_style.css
@@ -20,10 +20,16 @@ h3 {
 #score_chart {
     margin-top: 50px;
 }
+#content-wrapper {
+    padding: 0px;
+    margin: 0px;
+    width: 940px;
+}
 
 /* classes */
 .course-box {
     background: #efefef;
+    padding: 8px;
 }
 .clearing {
     clear:both;
@@ -56,6 +62,20 @@ h3 {
 #created {
     position: relative; z-index: 100000;
 }
+input[type="text"],
+input[type="password"],
+select {
+    font-size: 16px;
+    height: auto;
+    margin-bottom: 15px;
+    padding: 7px 9px;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+}
+select {
+    width: 230px;
+}
 
 
 /* tables */
@@ -76,4 +96,25 @@ tr.odd {
 }
 tr td:first-child {
     font-weight: bold;
+}
+
+
+
+
+.form-signin {
+    max-width: 300px;
+    padding: 19px 29px 29px;
+    margin: 0 auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+            box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
 }
