--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -3,9 +3,8 @@
     <head>
         <title>{{ title }}</title>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
-        <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
-        <link href="{{ STATIC_URL }}css/layout.css" rel="stylesheet">
-        <link href="{{ STATIC_URL }}css/skeleton.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        
         <link href="{{ STATIC_URL }}css/dg_style.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
@@ -17,18 +16,18 @@
     {# if there is a course location, init function #}
     <body {% if course and course.lat and course.lon %}onload="init(){% endif %}">
       <div class="container">  
-      <div id="top-menu" class="sixteen columns">
-        <a href="{% url 'index' %}">Home</a>
+        <div id="top-menu" class="masthead">
+          <a href="{% url 'index' %}">Home</a>
 
-          {% if request.user.is_authenticated %}
-            | <a href="/accounts/logout/">Sign Out</a>
-          {% else %}
-            | <a href="/accounts/login/">Sign In</a>
-          {% endif %}
-      </div><!-- end top-menu -->
-        
-          {% block content %}
-          {% endblock content %}
+            {% if request.user.is_authenticated %}
+              | <a href="/accounts/logout/">Sign Out</a>
+            {% else %}
+              | <a href="/accounts/login/">Sign In</a>
+            {% endif %}
+        </div><!-- end top-menu -->
+
+            {% block content %}
+            {% endblock content %}
 
       </div><!-- end container -->
     </body>
