--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>{{ title }}</title>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
         
         <link href="{{ STATIC_URL }}css/dg_style.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -15,20 +14,37 @@
 
     {# if there is a course location, init function #}
     <body {% if course and course.lat and course.lon %}onload="init(){% endif %}">
-      <div class="container">  
-        <div id="top-menu" class="masthead">
-          <a href="{% url 'index' %}">Home</a>
 
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
             {% if request.user.is_authenticated %}
-              | <a href="/accounts/logout/">Sign Out</a>
+            <li><a href="/accounts/logout/">Sign Out</a></li>
             {% else %}
-              | <a href="/accounts/login/">Sign In</a>
+            <li><a href="/accounts/login/">Sign In</a></li>
             {% endif %}
-        </div><!-- end top-menu -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-            {% block content %}
-            {% endblock content %}
+    <div id="main-content" class="container">
 
-      </div><!-- end container -->
+      {% block content %}
+      {% endblock content %}
+
+    </div><!-- end container -->
+
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
