--- a/score_keeper/templates/index.html
+++ b/score_keeper/templates/index.html
@@ -4,7 +4,7 @@
   <div class="row-fluid">
         
   {% for course in courses %}
-    <div class="span4 course-box">
+    <div class="col-lg-4 course-box">
         <h2>{{ course.name }}</h2>
         <p>{{ course.description }}</p>
         <p><a href="{{ course.get_absolute_url }}">Read more</a></p>
