--- a/score_keeper/templates/base.html
+++ b/score_keeper/templates/base.html
@@ -19,12 +19,24 @@
         <div id="top-menu" class="masthead">
           <a href="{% url 'index' %}">Home</a>
 
-            {% if request.user.is_authenticated %}
-              | <a href="/accounts/logout/">Sign Out</a>
-            {% else %}
-              | <a href="/accounts/login/">Sign In</a>
-            {% endif %}
+          {% if request.user.is_authenticated %}
+            | <a href="/accounts/logout/">Sign Out</a>
+          {% else %}
+            | <a href="/accounts/login/">Sign In</a>
+          {% endif %}
+            
         </div><!-- end top-menu -->
+
+            {% if messages %}
+              <div>
+                <strong>Messages:</strong>
+                <ul>
+            {% for message in messages %}
+            <li>{{message}}</li>
+            {% endfor %}
+                </ul>
+              </div>
+            {% endif %}
 
             {% block content %}
             {% endblock content %}
@@ -32,3 +44,4 @@
       </div><!-- end container -->
     </body>
 </html>
+
