refactor ScoreCard methods, pass tests

--- a/score_keeper/templates/course_detail.html
+++ b/score_keeper/templates/course_detail.html
@@ -102,6 +102,8 @@ var eighteen_score_arr = new Array();
 
     <div id="course_data" class="span8">
 
+    {# --- user scores --- #}
+
     <h3>Your {{ course.name }} data</h3>
 
     {% if data %}
